<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc" tools:context=".MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/dummy_content" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Bottom -->
        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/dummy_button" />
        </LinearLayout>

        <!-- middle -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

            <TextView android:text="@string/app_name" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_msg"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textSize="40dp"
                android:layout_above="@+id/button"
                android:layout_marginBottom="89dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_add"
                android:onClick="addTransaction"
                android:id="@+id/button"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stat"
                android:id="@+id/button2"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

    </FrameLayout>

</FrameLayout>
