<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.rika.hermesito.TransactionActivity">

    <!--<TextView android:text="@string/title_activity_transaction" android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="20dp"-->
        <!--android:background="#ff028300"-->
        <!--android:textColor="#ffffffff"-->
        <!--android:textStyle="bold"-->
        <!--android:padding="10dp"-->
        <!--android:id="@+id/textView" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_date"
        android:id="@+id/transaction_date_label"
        android:layout_alignBottom="@+id/transaction_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/transaction_date"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/transaction_cost"
        android:layout_alignEnd="@+id/transaction_cost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_time"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/transaction_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/transaction_time"
        android:layout_below="@+id/transaction_date"
        android:layout_alignLeft="@+id/transaction_date"
        android:layout_alignStart="@+id/transaction_date"
        android:layout_alignRight="@+id/transaction_date"
        android:layout_alignEnd="@+id/transaction_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_location"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/transaction_time"
        android:layout_alignEnd="@+id/transaction_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_item"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="450px"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/transaction_cost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="175px"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/transaction_cost"
        android:layout_alignTop="@+id/editText4"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_add_item"
        android:id="@+id/button3"
        android:onClick="addItem"
        android:layout_alignBottom="@+id/transaction_cost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_subtotal"
        android:id="@+id/textView6"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/editText4"
        android:layout_toLeftOf="@+id/transaction_subtotal"
        android:layout_toStartOf="@+id/transaction_subtotal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/transaction_subtotal"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/transaction_cost"
        android:layout_alignStart="@+id/transaction_cost"
        android:layout_alignRight="@+id/transaction_cost"
        android:layout_alignEnd="@+id/transaction_cost" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/transaction_tax"
        android:layout_below="@+id/transaction_subtotal"
        android:layout_alignRight="@+id/transaction_subtotal"
        android:layout_alignEnd="@+id/transaction_subtotal"
        android:layout_alignLeft="@+id/transaction_subtotal"
        android:layout_alignStart="@+id/transaction_subtotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_tax"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/transaction_tax"
        android:layout_toLeftOf="@+id/transaction_tax"
        android:layout_toStartOf="@+id/transaction_tax" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText8"
        android:layout_below="@+id/transaction_tax"
        android:layout_alignRight="@+id/transaction_tax"
        android:layout_alignEnd="@+id/transaction_tax"
        android:layout_alignLeft="@+id/transaction_tax"
        android:layout_alignStart="@+id/transaction_tax" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_total"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/editText8"
        android:layout_toLeftOf="@+id/editText8"
        android:layout_toStartOf="@+id/editText8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/transaction_tip"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/transaction_date_label"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_tip"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_add_datetime"
        android:id="@+id/transaction_date_button"
        android:onClick="getDatePickerDialog"
        android:layout_above="@+id/transaction_time_button"
        android:layout_toRightOf="@+id/transaction_cost"
        android:layout_toEndOf="@+id/transaction_cost" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_add_datetime"
        android:id="@+id/transaction_time_button"
        android:onClick="getTimePickerDialog"
        android:layout_above="@+id/textView4"
        android:layout_toRightOf="@+id/transaction_cost"
        android:layout_toEndOf="@+id/transaction_cost" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_submit"
        android:id="@+id/button4"
        android:textSize="15dp"
        android:onClick="submit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_acct"
        android:id="@+id/textView"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_add_item"
        android:id="@+id/button5"
        android:onClick="addPayment"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/editText8"
        android:layout_toEndOf="@+id/editText8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_acct"
        android:layout_alignBottom="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acct_list_spinner"
        android:layout_alignBottom="@+id/transaction_acct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/transaction_acct"
        android:layout_toStartOf="@+id/transaction_acct"
        android:layout_alignTop="@+id/transaction_acct" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_add_datetime"
        android:id="@+id/button6"
        android:onClick="getLocation"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--<DatePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/datePicker"-->
        <!--android:layout_alignBottom="@+id/transaction_date"-->
        <!--android:layout_toRightOf="@+id/transaction_date"-->
        <!--android:layout_toEndOf="@+id/transaction_date" />-->

    <!--<TimePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/timePicker"-->
        <!--android:layout_alignBottom="@+id/transaction_time"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->


</RelativeLayout>
